--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "bootstrap": "^4.5.0",
     "datatables.net": "^1.11.3",
     "datatables.net-bs4": "^1.11.3",
+    "datatables.net-buttons": "^2.2.2",
+    "datatables.net-buttons-dt": "^2.2.2",
     "jquery": "^3.6.0",
+    "jszip": "^3.9.1",
     "primeicons": "^5.0.0",
     "primeng": "^13.3.2",
     "rxjs": "~6.6.0",
@@ -40,6 +43,7 @@
     "@angular/cli": "~12.2.9",
     "@angular/compiler-cli": "~12.2.0",
     "@types/datatables.net": "^1.10.21",
+    "@types/datatables.net-buttons": "^1.4.7",
     "@types/jasmine": "~3.8.0",
     "@types/jquery": "^3.5.9",
     "@types/node": "^12.11.1",
