server side and loader

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@ng-select/ng-select": "^8.1.1",
     "angular-datatables": "^13.0.1",
     "bootstrap": "^4.5.0",
     "datatables.net": "^1.11.3",
@@ -32,6 +33,7 @@
     "datatables.net-buttons-dt": "^2.2.2",
     "jquery": "^3.6.0",
     "jszip": "^3.9.1",
+    "notiflix": "^3.2.5",
     "primeicons": "^5.0.0",
     "primeng": "^13.3.2",
     "rxjs": "~6.6.0",
